refactor: actions docker image taging

--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -71,20 +71,7 @@ jobs:
 
     - name: Setting a buildtag
       id: settag
-      run: |
-        if [ $GITHUB_REF_TYPE == "branch" ]; then
-          case ${{ github.ref_name }} in
-            "main")
-              echo "::set-output name=tag::stable"
-              ;;
-            "develop")
-              echo "::set-output name=tag::latest"
-              ;;
-            *)
-              echo "::set-output name=tag::${{ github.sha }}"
-              ;;
-          esac
-        fi
+      run: ./pipeline_set_output_tag.sh
 
   build:
     runs-on: ubuntu-20.04
