--- a/.github/workflows/web-crux-ui.yml
+++ b/.github/workflows/web-crux-ui.yml
@@ -64,20 +64,7 @@ jobs:
 
     - name: Setting a buildtag
       id: settag
-      run: |
-        if [ $GITHUB_REF_TYPE == "branch" ]; then
-          case ${{ github.ref_name }} in
-            "main")
-              echo "::set-output name=tag::stable"
-              ;;
-            "develop")
-              echo "::set-output name=tag::latest"
-              ;;
-            *)
-              echo "::set-output name=tag::${{ github.sha }}"
-              ;;
-          esac
-        fi
+      run: ../pipeline_set_output_tag.sh
 
   # job: Build image
   build_image:
