--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -71,6 +71,7 @@ jobs:
 
     - name: Setting a buildtag
       id: settag
+      working-directory: .github/workflows
       run: ./pipeline_set_output_tag.sh
 
   build:
