--- a/.github/workflows/web-kratos.yml
+++ b/.github/workflows/web-kratos.yml
@@ -12,9 +12,6 @@ permissions:
 jobs:
   prerequirements:
     runs-on: ubuntu-20.04
-    defaults:
-      run:
-        working-directory: ${{ env.WORKING_DIRECTORY }}
     container:
       image: docker:latest
     outputs:
@@ -25,10 +22,11 @@ jobs:
 
     - name: Setting a buildtag
       id: settag
-      run: ../pipeline_set_output_tag.sh
+      working-directory: .github/workflows
+      run: ./pipeline_set_output_tag.sh
 
-  Build:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-20.04
     container: docker:latest
     if: github.ref_name == 'develop' || github.ref_name == 'main'
     defaults:
