fix: crux-ui env.example

--- a/web/crux-ui/.env.example
+++ b/web/crux-ui/.env.example
@@ -1,3 +1,7 @@
 CRUX_ADDRESS=172.17.0.1:5001
 CRUX_INSECURE=true
 KRATOS_URL=http://172.17.0.1:8000/kratos
+CRUX_UI_VERSION=local
+LOG_LEVEL=trace
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=<public_recaptcha_site_key>
+RECAPTCHA_SECRET_KEY=<recaptcha_secret_key>
