--- a/.github/workflows/agent.yml
+++ b/.github/workflows/agent.yml
@@ -72,7 +72,7 @@ jobs:
     - name: Setting a buildtag
       id: settag
       working-directory: .github/workflows
-      run: ./pipeline_set_output_tag.sh
+      run: ./pipeline_set_output_tag.sh $GITHUB_REF_TYPE ${{ github.ref_name }} ${{ github.sha }}
 
   build:
     runs-on: ubuntu-20.04
