--- a/.github/workflows/web-crux.yml
+++ b/.github/workflows/web-crux.yml
@@ -69,7 +69,7 @@ jobs:
     - name: Setting a buildtag
       id: settag
       working-directory: .github/workflows
-      run: ./pipeline_set_output_tag.sh
+      run: ./pipeline_set_output_tag.sh $GITHUB_REF_TYPE ${{ github.ref_name }} ${{ github.sha }}
 
   # job: Build image
   build_image:
