--- a/.github/workflows/web-kratos.yml
+++ b/.github/workflows/web-kratos.yml
@@ -25,7 +25,7 @@ jobs:
       working-directory: .github/workflows
       run: ./pipeline_set_output_tag.sh $GITHUB_REF_TYPE ${{ github.ref_name }} ${{ github.sha }}
 
-  build:
+  build_image:
     runs-on: ubuntu-20.04
     container: docker:latest
     if: github.ref_name == 'develop' || github.ref_name == 'main'
@@ -42,7 +42,30 @@ jobs:
 
     - name: Docker build and push
       run: |
-        docker build . -t ghcr.io/dyrector-io/dyrectorio/web-kratos:$IMAGE_TAG
-        docker push ghcr.io/dyrector-io/dyrectorio/web-kratos:$IMAGE_TAG
+        docker build . -t ghcr.io/dyrector-io/dyrectorio/web/kratos:$IMAGE_TAG
+        docker push ghcr.io/dyrector-io/dyrectorio/web/kratos:$IMAGE_TAG
       env:
         IMAGE_TAG: ${{ needs.prerequirements.outputs.tag }}
+  
+  sign_image:
+    runs-on: ubuntu-20.04
+    container:
+      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16
+    needs: [build_image,prerequirements]
+    environment: Workflow - Protected
+    steps:
+    - name: Write signing key to disk
+      run: echo "${{ secrets.COSIGN_PRIVATE_KEY }}" > cosign.key
+
+    - name: Login to GHCR
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GHCR_PAT }}
+
+    - name: Sign container image
+      run: |
+        cosign sign --key cosign.key ghcr.io/dyrector-io/dyrectorio/web/kratos:${{ needs.prerequirements.outputs.tag }}
+      env:
+        COSIGN_PASSWORD: "${{ secrets.COSIGN_PASSWORD }}"
