--- a/.github/workflows/web-kratos.yml
+++ b/.github/workflows/web-kratos.yml
@@ -10,10 +10,13 @@ permissions:
   pull-requests: read
 
 jobs:
-  prerequirements:
-    runs-on: ubuntu-20.04
-    container:
-      image: docker:latest
+  build_image:
+    runs-on: ubuntu-22.04
+    container: docker:latest
+    if: github.ref_name == 'develop' || github.ref_name == 'main'
+    defaults:
+      run:
+        working-directory: web/kratos
     outputs:
       tag: ${{ steps.settag.outputs.tag }}
     steps:
@@ -23,16 +26,12 @@ jobs:
     - name: Setting a buildtag
       id: settag
       working-directory: .github/workflows
-      run: ./pipeline_set_output_tag.sh $GITHUB_REF_TYPE ${{ github.ref_name }} ${{ github.sha }}
+      run: |
+        echo $GITHUB_REF_TYPE 
+        echo ${{ github.ref_name }}
+        echo ${{ github.sha }}
+        ./pipeline_set_output_tag.sh $GITHUB_REF_TYPE ${{ github.ref_name }} ${{ github.sha }}
 
-  build_image:
-    runs-on: ubuntu-20.04
-    container: docker:latest
-    if: github.ref_name == 'develop' || github.ref_name == 'main'
-    defaults:
-      run:
-        working-directory: web/kratos
-    steps:
     - name: Login to GHCR
       uses: docker/login-action@v2
       with:
@@ -45,13 +44,13 @@ jobs:
         docker build . -t ghcr.io/dyrector-io/dyrectorio/web/kratos:$IMAGE_TAG
         docker push ghcr.io/dyrector-io/dyrectorio/web/kratos:$IMAGE_TAG
       env:
-        IMAGE_TAG: ${{ needs.prerequirements.outputs.tag }}
+        IMAGE_TAG: ${{ steps.settag.outputs.tag }}
   
   sign_image:
     runs-on: ubuntu-20.04
     container:
       image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.16
-    needs: [build_image,prerequirements]
+    needs: build_image
     environment: Workflow - Protected
     steps:
     - name: Write signing key to disk
