--- a/web/crux-ui/docker-compose.yaml
+++ b/web/crux-ui/docker-compose.yaml
@@ -7,16 +7,15 @@ services:
     build:
       context: .
       args:
-        - TIME_ZONE=Europe/Budapest
         - NEXT_PUBLIC_RECAPTCHA_SITE_KEY=$NEXT_PUBLIC_RECAPTCHA_SITE_KEY
     environment:
+      - TZ=Europe/Budapest
       - KRATOS_URL=$KRATOS_URL
       - CRUX_ADDRESS=$CRUX_ADDRESS
-      - LOG_LEVEL=$LOG_LEVEL
       - RECAPTCHA_SECRET_KEY=$RECAPTCHA_SECRET_KEY
     restart: unless-stopped
     volumes:
-      - crux-ui-certs:/usr/app/certs
+      - crux-ui-certs:/usr/certs
     networks:
       - crux-intranet
 
