feat: display agent version
Done:
 - agent compile-time version (grpc, http)
 - display version on the node edit screen

--- a/web/.env.example
+++ b/web/.env.example
@@ -17,3 +17,5 @@ AUTH_URL=http://host.docker.internal:8000/auth
 SERVER_NAME=host.docker.internal
 AUTH_ADDRESS=host.docker.internal:9000
 CRUX_UI_ADDRESS=host.docker.internal:3000
+CRUX_UI_URL=http://172.17.0.1:8000
+
