--- a/web/docker-compose.dev.yaml
+++ b/web/docker-compose.dev.yaml
@@ -58,6 +58,7 @@ services:
       - KRATOS_ADMIN_URL=${KRATOS_ADMIN_URL:-http://172.17.0.1:9434}
       - KRATOS_URL=${KRATOS_URL:-http://172.17.0.1:8000/kratos}
       - AUTH_URL=${AUTH_URL:-http://172.17.0.1:8000/auth}
+      - CRUX_UI_URL=${CRUX_UI_URL:-http://172.17.0.1:8000}
       - DEV=${KRATOS_DEV:-false}
       - SQA_OPT_OUT=true
       - DSN=postgres://kratos:${KRATOS_POSTGRES_PASSWORD}@kratos-postgres:5432/kratos?sslmode=disable&max_conns=20&max_idle_conns=4
