--- a/web/crux-ui/package.json
+++ b/web/crux-ui/package.json
@@ -1,7 +1,18 @@
 {
   "name": "crux-ui",
   "version": "0.1.0",
+  "description": "Open-source delivery platform that helps developers to deliver applications efficiently by simplifying software releases and operations in any environment.",
+  "author": "dyrector.io",
   "private": true,
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dyrector-io/dyrectorio.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dyrector-io/dyrectorio/issues"
+  },
+  "homepage": "https://github.com/dyrector-io/dyrectorio#readme",
   "scripts": {
     "dev": "next dev --hostname 0.0.0.0",
     "prod": "next start",
@@ -13,8 +24,6 @@
     "build:proto": "find proto -name '*.proto' -exec protoc --experimental_allow_proto3_optional --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_opt=esModuleInterop=true --ts_proto_opt=outputJsonMethods=true --ts_proto_opt=useDate=false --ts_proto_opt=outputServices=grpc-js --ts_proto_out=./src/models/ {} \\;",
     "start": "npm run dev"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.3.7",
     "@grpc/proto-loader": "^0.6.5",
