--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -16,6 +16,7 @@ GRPC_API_PORT=5001
 GRPC_API_INSECURE=true
 
 LOG_LEVEL=verbose
+K8S_LOCAL_MANIFEST=false
 
 SENDGRID_KEY=<sg_key>
 FROM_EMAIL=<email_address>
