--- a/web/.env.example
+++ b/web/.env.example
@@ -19,3 +19,4 @@ AUTH_ADDRESS=host.docker.internal:9000
 CRUX_UI_ADDRESS=host.docker.internal:3000
 CRUX_UI_URL=http://172.17.0.1:8000
 
+COMPOSE_FILE=docker-compose.dev.yaml
