--- a/.chglog/config.yml
+++ b/.chglog/config.yml
@@ -1,10 +1,11 @@
-style: gitlab
+style: github
 template: CHANGELOG.tpl.md
 info:
   title: CHANGELOG
   repository_url: https://github.com/dyrector-io/dyrectorio
 options:
   commits:
+    sort_by: Type
   commit_groups:
     title_maps:
   header:
