--- a/web/crux-ui/package.json
+++ b/web/crux-ui/package.json
@@ -41,6 +41,7 @@
     "node-fetch": "^2.6.6",
     "prismjs": "^1.28.0",
     "react": "^17.0.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-hot-toast": "^2.1.1",
@@ -56,6 +57,7 @@
     "@types/jsoneditor": "^9.5.1",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^17.0.15",
+    "@types/react-datepicker": "^4.4.2",
     "@types/react-google-recaptcha": "^2.1.2",
     "@types/uuid": "^8.3.4",
     "@types/yup": "^0.29.13",
