feat: implement google container registry
feat: implement google container registry
fix[crux-ui]: seeder dto to prisma type error
refactor[crux-ui]: fileUpload component

--- a/web/crux-ui/package.json
+++ b/web/crux-ui/package.json
@@ -35,6 +35,7 @@
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "formik": "^2.2.9",
+    "google-auth-library": "^8.1.1",
     "google-protobuf": "^3.15.8",
     "next": "^12.1.4",
     "next-translate": "^1.0.7",
