fix: rename the install script files

--- a/web/crux/Dockerfile
+++ b/web/crux/Dockerfile
@@ -21,8 +21,8 @@ RUN npm ci prisma
 COPY ./prisma ./prisma
 RUN npx prisma generate
 
-COPY ./install-dagent.sh.hbr ./install-dagent.sh.hbr
-COPY ./install-crane.sh.hbr ./install-crane.sh.hbr
+COPY ./install-docker.sh.hbr ./install-docker.sh.hbr
+COPY ./install-k8s.sh.hbr ./install-k8s.sh.hbr
 COPY ./proto ./proto
 COPY ./dist ./dist
 
