--- a/web/crux-ui/docker-compose.yaml
+++ b/web/crux-ui/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
       - RECAPTCHA_SECRET_KEY=$RECAPTCHA_SECRET_KEY
     restart: unless-stopped
     volumes:
-      - crux-ui-certs:/usr/app/certs
+      - crux-ui-certs:/app/certs
     networks:
       - crux-intranet
 
