--- a/web/crux/docker-compose.yaml
+++ b/web/crux/docker-compose.yaml
@@ -1,27 +1,11 @@
 version: '3.3'
 
 services:
-  crux-postgres:
-    image: postgres:14.2-alpine
-    container_name: crux-postgres
-    environment:
-      - REGISTRY=${REGISTRY}
-      - IMAGE_NAME=${IMAGE_NAME}
-      - CRUX_VERSION=${CRUX_VERSION}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_USER=crux
-      - POSTGRES_DB=crux
-    restart: unless-stopped
-    volumes:
-      - crux-db:/var/lib/postgresql/data
-    networks:
-      - crux-intranet
-
   crux-migrate:
     container_name: crux-migrate
     depends_on:
       - crux-postgres
-    image: ${REGISTRY}/${IMAGE_NAME}:${CRUX_IMAGE_TAG}
+    image: ghcr.io/dyrector-io/dyrectorio/web/crux:${CRUX_IMAGE_TAG}
     build:
       context: ./
       args:
@@ -38,7 +22,7 @@ services:
     depends_on:
       crux-migrate:
         condition: service_completed_successfully
-    image: ${REGISTRY}/${IMAGE_NAME}:${CRUX_IMAGE_TAG}
+    image: ghcr.io/dyrector-io/dyrectorio/web/crux:${CRUX_IMAGE_TAG}
     ports:
       - 5000:5000
       - 5001:5001
@@ -49,7 +33,7 @@ services:
       - SENDGRID_KEY=$SENDGRID_KEY
       - FROM_EMAIL=$FROM_EMAIL
       - FROM_NAME=$FROM_NAME
-      - KRATOS_URL=$KRATOS_URL
+      - KRATOS_ADMIN_URL=$KRATOS_ADMIN_URL
       - CRUX_UI_URL=$CRUX_UI_URL
     volumes:
       - crux-certs:/usr/app/certs
