--- a/web/crux/package.json
+++ b/web/crux/package.json
@@ -33,7 +33,8 @@
     "database:up": "docker-compose -f docker-compose.database.yaml up -d",
     "database:down": "docker-compose -f docker-compose.database.yaml down",
     "test:crux": "npm run docker:up && npx prisma migrate deploy && jest -i && npm docker:down",
-    "compodoc": "npx compodoc -p tsconfig.doc.json --theme stripe"
+    "compodoc": "npx compodoc -p tsconfig.doc.json --theme stripe",
+    "demo-seed": "npx ts-node prisma/seeds/demo-seeder.ts"
   },
   "prisma": {
     "seed": "ts-node prisma/seeds/seeder.ts",
