--- a/web/crux-ui/docker-compose.yaml
+++ b/web/crux-ui/docker-compose.yaml
@@ -4,15 +4,13 @@ services:
   crux-ui:
     container_name: crux-ui
     image: ghcr.io/dyrector-io/dyrectorio/web/crux-ui:${CRUX_UI_IMAGE_TAG}
-    build:
-      context: .
-      args:
-        - NEXT_PUBLIC_RECAPTCHA_SITE_KEY=$NEXT_PUBLIC_RECAPTCHA_SITE_KEY
+    build: .
     environment:
       - TZ=Europe/Budapest
       - KRATOS_URL=$KRATOS_URL
       - CRUX_ADDRESS=$CRUX_ADDRESS
       - RECAPTCHA_SECRET_KEY=$RECAPTCHA_SECRET_KEY
+      - RECAPTCHA_SITE_KEY=$RECAPTCHA_SITE_KEY
     restart: unless-stopped
     volumes:
       - crux-ui-certs:/app/certs
