--- a/web/crux/package.json
+++ b/web/crux/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crux",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Open-source delivery platform that helps developers to deliver applications efficiently by simplifying software releases and operations in any environment.",
   "author": "dyrector.io",
   "private": true,
@@ -45,8 +45,8 @@
     "@grpc/grpc-js": "^1.6.8",
     "@grpc/proto-loader": "^0.7.0",
     "@nestjs/axios": "^0.1.0",
-    "@nestjs/jwt": "^9.0.0",
     "@nestjs/cli": "^9.0.0",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/microservices": "^9.0.8",
     "@nestjs/platform-express": "^9.0.8",
     "@ory/kratos-client": "^0.10.1",
@@ -64,6 +64,7 @@
     "handlebars": "^4.7.7",
     "pg": "^8.7.3",
     "prom-client": "^14.0.1",
+    "protobufjs": "^7.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
