feat: separate status page from page 500

--- a/web/crux/tsconfig.json
+++ b/web/crux/tsconfig.json
@@ -16,7 +16,8 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "resolveJsonModule": true,
   },
   "include": ["src", "decs.d.ts"],
   "exclude": ["node_modules", "prisma"]
