--- a/.github/workflows/web-crux.yml
+++ b/.github/workflows/web-crux.yml
@@ -49,7 +49,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install dependencies
-      run: npm ci --arch=x64 --platform=linuxmusl --cache .npm --prefer-offline
+      run: npm ci --arch=x64 --platform=linuxmusl --cache .npm --prefer-offline --no-fund
 
     - name: Linting the code
       run: npm run lint
