--- a/web/crux/Dockerfile
+++ b/web/crux/Dockerfile
@@ -7,7 +7,7 @@ COPY ./package.json ./package-lock.json ./tsconfig.build.json ./tsconfig.json ./
 COPY ./prisma ./prisma
 COPY ./src ./src
 
-RUN npm ci && npm run prismagen
+RUN npm ci --no-fund && npm run prismagen
 RUN npm run build
 
 FROM node:18.7-alpine AS RUNNER
