--- a/web/crux-ui/package.json
+++ b/web/crux-ui/package.json
@@ -57,6 +57,7 @@
     "@playwright/test": "^1.26.0-alpha-aug-23-2022",
     "@types/google-protobuf": "^3.15.5",
     "@types/jsoneditor": "^9.5.1",
+    "@types/openpgp": "^4.4.18",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^17.0.15",
     "@types/react-datepicker": "^4.4.2",
@@ -78,6 +79,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "grpc_tools_node_protoc_ts": "^5.3.2",
     "grpc-tools": "^1.11.2",
+    "openpgp": "^5.4.0",
     "postcss": "^8.4.12",
     "prettier": "^2.5.1",
     "prettier-plugin-organize-imports": "^2.3.4",
