--- a/agent/Makefile
+++ b/agent/Makefile
@@ -20,16 +20,16 @@ GOSEC=v2.12.0
 GOLANGCI=v1.46.2
 GOSWAG=v1.8.3
 
-.PHONY: gow-crane
-gow-crane: ##
+.PHONY: go-crane
+go-crane: ##
 	cd cmd/crane && \
-	gow run . ; \
+	go run . ; \
 	cd -
 
-.PHONY: gow-dagent
-gow-dagent: ##
+.PHONY: go-dagent
+go-dagent: ##
 	cd cmd/dagent && \
-	gow run . ; \
+	go run . ; \
 	cd -
 
 .PHONY: compile-crane
@@ -41,7 +41,7 @@ compile-crane: ##
 .PHONY: compile-dagent
 compile-dagent: ##
 	cd cmd/dagent && \
-	GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build ${LDFLAGS} -o ../../build/out/dagent; \
+	GOOS=windows GOARCH=amd64 CGO_ENABLED=0 go build ${LDFLAGS} -o ../../build/out/dagent.exe; \
 	cd -
 
 .PHONY: install-go-tools
