techdept: add e2e tests

--- a/web/crux-ui/.env.example
+++ b/web/crux-ui/.env.example
@@ -6,3 +6,4 @@ LOG_LEVEL=trace
 DISABLE_RECAPTCHA=true
 RECAPTCHA_SITE_KEY=<public_recaptcha_site_key>
 RECAPTCHA_SECRET_KEY=<recaptcha_secret_key>
+E2E_BASE_URL=http://172.17.0.1:8000
