feat: replace nginx with traefik

--- a/web/.env.example
+++ b/web/.env.example
@@ -10,13 +10,9 @@ SMTP_USER=test
 SMTP_PASSWORD=test
 SMTP_URL=mailslurper:1025/?skip_ssl_verify=true&legacy_ssl=true
 
+COMPOSE_FILE=docker-compose.dev.yaml
+
 # MacOS dependencies - more info in ./auth/README.md
 KRATOS_URL=http://host.docker.internal:8000/kratos
 KRATOS_ADMIN_URL=http://host.docker.internal:9434
-AUTH_URL=http://host.docker.internal:8000/auth
-SERVER_NAME=host.docker.internal
-AUTH_ADDRESS=host.docker.internal:9000
-CRUX_UI_ADDRESS=host.docker.internal:3000
-CRUX_UI_URL=http://172.17.0.1:8000
-
-COMPOSE_FILE=docker-compose.dev.yaml
+TRAEFIK_HOST=host.docker.internal
